Fixed closed button disappearing, added line breaks inbetween disconnects

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -79,6 +79,10 @@ li {
     padding:1px;
     padding-left:4px;
     padding-right:4px;
+
+    margin-top: 10px;
+    margin-bottom:-40px;
+    margin-right:30px;
 }
 
 .omegleWindow {
